@@ -3,3 +3,5 @@
 #include "Log_Macros.h"
 
 DDS4CCM_Logger_Export unsigned int DDS4CCM_debug_level = 0;
+
+DDS4CCM_Logger_Export ACE_Log_Category DDS4CCM_log_category ("DDS4CCM");
